@@ -2,3 +2,4 @@
 assets/*
 *.log
 *.swp
+*.swo
